src/component/SignInSignupNudge/SignInSignupNudge.style.scss
.nudge-container {
  width: 173px;
  height: 100px;
  display: flex;
  flex-direction: column;
  right: -68px;
  top: 20px;
  z-index: 100;
  position: absolute;

  .nudge-content {
    padding: 14px 16px;
    border-radius: 6px;
    box-shadow: 0px 0px 40px #00000029;
    background-color: white;
    position: relative;
    .signin {
      width: 141px;
      height: 32px;
      border-radius: 6px;
      background-color: black;
      color: white;
      font-family: "AvenirNext-Bold";
      font-size: 12px;
      margin-bottom: 12px;
    }
    .newCostomer {
      font-family: "AvenirNext-DemiBold";
      font-size: 12px;
      .register {
        cursor: pointer;
        padding-left: 3px;
        padding-right: 3px;
        color: #f96446;
      }
    }
  }

  .nudge-content::before {
    content: "";
    position: absolute;
    display: block;
    width: 0px;
    left: 50%;
    top: 5px;
    border: 20px solid transparent;
    border-top: 0;
    border-bottom: 20px solid #ffffff;
    transform: translate(-50%, calc(-100% - 5px));
  }
}

.arabic-alignment {
  right: unset;
  left: -68px;
}

